2000-01-26  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-save.c (html_engine_save_output_string): New function
	to write a plain, unencoded string.

	* htmltext.c (save): Use `html_engine_save_encode()' to write the
	string encoded with entities.

	* htmlengine-save.c (encode_entities): New helper function to
	encode a string through entities.
	(html_engine_save_encode): New function to write an encoded
	buffer.
	(html_engine_save_encode_string): New to write an encoded
	zero-terminated string.

2000-01-25  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (idle_handler): Call `gtk_html_calc_scrollbars' to
	update the scrollbars.

	* gtkhtml.c (gtk_html_save): New function.

	* htmltext.c (save): New function, implementation of
	`HTMLObject::save'.  For now, it just dumps the text.
	(html_text_class_init): Install it.

	* htmlcursor.c (html_cursor_home): Removed debugging message.

	* htmlobject.c (html_object_save): New function.
	(save): New function, default implementation of
	`HTMLObject::save'.
	(html_object_class_init): Install it.

	* htmlobject.h: New virtual method `HTMLObject::save'.

	* htmlengine-save.h: New file.
	* htmlengine-save.c: New file.

	* htmlengine.c (html_engine_set_editable): Move the cursor to the
	home if the widget becomes editable.  Also, if the editable state
	changes, redraw the whole thing.
	(html_engine_timer_event): Move the cursor home.
	(html_engine_update_event): Move the cursor home at the end of
	parsing.

	* testgtkhtml.c (goto_url): Do not call `gtk_html_parse()'
	anymore.

	* gtkhtml.c (init): Initialize `editable' to `FALSE'.
	(gtk_html_parse): Turned into a dummy.
	(gtk_html_begin): Call `html_engine_parse()' too.  Also set
	`load_in_progress' to `TRUE' and the engine's editable state to
	`FALSE'.
	(gtk_html_end): Set `load_in_progress' to `FALSE'.  Set the
	engine's editable state according to the value of the `editable'
	member.
	(gtk_html_set_editable): New function.